@@ -15,6 +15,7 @@
 "SHOW_BUTTONS","Show status buttons","Checkbox in options panel."
 "TRANSPARENT_UI","Use transparent button backgrounds","Checkbox in options panel."
 "INITIAL_STATUS","Enable anarchy after loading is completed","Checkbox in options panel."
+"MOVEIT_ANARCHY","Enable anarchy while the Move It tool is active","Checkbox in options panel."
 "RESET_POS","Reset button position","Button in options panel."
 "OPTIONS_LIMIT","More trees","Options panel header."
 "LOAD_OPTIONS","Loading actions","Options panel header."
