@@ -1,3 +1,6 @@
+- Add option to automatically enable anarchy whenever the Move It tool is active
+
+
 Version 0.9.11.3 -
 
 - Add forced unhiding at load when both network and building unhiding is selected (overrides any other mod)
